[package]
name = "rusts3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json", "blocking"] }
serde_json = "1.0.104"
tracing = "0.1.37"